perf: Optimize external apps detection and add WinGet auto-install
Removed fuzzy matching fallback logic - external apps now use WinGet export only for   exact ID matching. Apps without WinGetPackageId use simple registry exact name matching. WinGet is now installed in background after startup if unavailable, with progress display and user-actionable banner in External Apps view. Added support for multiple WinGetPackageId per app using string arrays. Added --accept-source-agreements flag to winget commands to prevent first-run hangs.

Updated WinGetPackageId to string array to allow defining alternative package IDs for detection. Refactored services to use the first ID for operations and any ID for status checks. Updated all app definitions to use C# 12 collection expressions.

Added new keys and translations to all localization files.

--- a/src/Winhance.WPF/Localization/af.json
+++ b/src/Winhance.WPF/Localization/af.json
@@ -1398,5 +1398,9 @@
   "Button_Unlock": "Ontsluit",
   "Common_ClickToUnlock": "Klik om te ontsluit",
   "Setting_taskbar-copilot_Name": "Copilot Voorskou Knoppie",
-  "Setting_taskbar-copilot_Description": "Wys of verberg die Copilot Voorskou knoppie op die taakbalk"
+  "Setting_taskbar-copilot_Description": "Wys of verberg die Copilot Voorskou knoppie op die taakbalk",
+  "ExternalApps_WinGetUnavailable": "Kan nie installasiestatus bepaal nie. Koppel aan die internet en klik die Verfris-knoppie.",
+  "Error_NoInternetConnection": "Geen internetverbinding nie. Koppel asseblief en probeer weer.",
+  "Error_WinGetInstallFailed": "Kon nie WinGet installeer nie. Gaan asseblief u internetverbinding na.",
+  "Error_WinGetNotAvailable": "WinGet is nie beskikbaar op hierdie stelsel nie."
 }
