--- a/src/Winhance.WPF/Localization/en.json
+++ b/src/Winhance.WPF/Localization/en.json
@@ -994,6 +994,10 @@
   "ExternalApps_Category_PrivacySecurity": "Privacy \u0026 Security",
   "ExternalApps_Category_RemoteAccess": "Remote Access",
   "ExternalApps_Category_RuntimesDependencies": "Runtimes \u0026 Dependencies",
+  "ExternalApps_WinGetUnavailable": "Unable to determine installation status. Connect to internet and click Refresh button.",
+  "Error_NoInternetConnection": "No internet connection. Please connect and try again.",
+  "Error_WinGetInstallFailed": "Failed to install WinGet. Please check your internet connection.",
+  "Error_WinGetNotAvailable": "WinGet is not available on this system.",
   "PowerPlan_PowerSaver_Name": "Power Saver",
   "PowerPlan_PowerSaver_Description": "Delivers reduced performance which may increase power savings.",
   "PowerPlan_Balanced_Name": "Balanced",
