--- a/src/Winhance.WPF/Localization/it.json
+++ b/src/Winhance.WPF/Localization/it.json
@@ -1398,5 +1398,9 @@
   "Button_Unlock": "Sblocca",
   "Common_ClickToUnlock": "Fai clic per sbloccare",
   "Setting_taskbar-copilot_Name": "Pulsante anteprima Copilot",
-  "Setting_taskbar-copilot_Description": "Mostra o nascondi il pulsante di anteprima di Copilot sulla barra delle applicazioni"
+  "Setting_taskbar-copilot_Description": "Mostra o nascondi il pulsante di anteprima di Copilot sulla barra delle applicazioni",
+  "ExternalApps_WinGetUnavailable": "Impossibile determinare lo stato dell'installazione. Connettiti a Internet e fai clic sul pulsante Aggiorna.",
+  "Error_NoInternetConnection": "Nessuna connessione Internet. Connettiti e riprova.",
+  "Error_WinGetInstallFailed": "Impossibile installare WinGet. Controlla la tua connessione Internet.",
+  "Error_WinGetNotAvailable": "WinGet non è disponibile su questo sistema."
 }
