--- a/src/Winhance.WPF/Localization/cs.json
+++ b/src/Winhance.WPF/Localization/cs.json
@@ -1398,5 +1398,9 @@
   "Button_Unlock": "Odemknout",
   "Common_ClickToUnlock": "Kliknutím odemknete",
   "Setting_taskbar-copilot_Name": "Tlačítko náhledu Copilota",
-  "Setting_taskbar-copilot_Description": "Zobrazit nebo skrýt tlačítko náhledu Copilota na hlavním panelu"
+  "Setting_taskbar-copilot_Description": "Zobrazit nebo skrýt tlačítko náhledu Copilota na hlavním panelu",
+  "ExternalApps_WinGetUnavailable": "Nelze zjistit stav instalace. Připojte se k internetu a klikněte na tlačítko Obnovit.",
+  "Error_NoInternetConnection": "Žádné připojení k internetu. Připojte se prosím a zkuste to znovu.",
+  "Error_WinGetInstallFailed": "Nepodařilo se nainstalovat WinGet. Zkontrolujte prosím své připojení k internetu.",
+  "Error_WinGetNotAvailable": "WinGet není v tomto systému k dispozici."
 }
