--- a/src/Winhance.WPF/Localization/lt.json
+++ b/src/Winhance.WPF/Localization/lt.json
@@ -1398,5 +1398,9 @@
   "Button_Unlock": "Atrakinti",
   "Common_ClickToUnlock": "Spustelėkite, kad atrakintumėte",
   "Setting_taskbar-copilot_Name": "Copilot peržiūros mygtukas",
-  "Setting_taskbar-copilot_Description": "Rodyti arba slėpti Copilot peržiūros mygtuką užduočių juostoje"
+  "Setting_taskbar-copilot_Description": "Rodyti arba slėpti Copilot peržiūros mygtuką užduočių juostoje",
+  "ExternalApps_WinGetUnavailable": "Nepavyko nustatyti diegimo būsenos. Prisijunkite prie interneto ir spustelėkite mygtuką Atnaujinti.",
+  "Error_NoInternetConnection": "Nėra interneto ryšio. Prisijunkite ir bandykite dar kartą.",
+  "Error_WinGetInstallFailed": "Nepavyko įdiegti „WinGet“. Patikrinkite interneto ryšį.",
+  "Error_WinGetNotAvailable": "„WinGet“ šioje sistemoje nepasiekiama."
 }
