--- a/src/Winhance.WPF/Localization/nl-BE.json
+++ b/src/Winhance.WPF/Localization/nl-BE.json
@@ -1398,5 +1398,9 @@
   "Button_Unlock": "Ontgrendelen",
   "Common_ClickToUnlock": "Klik om te ontgrendelen",
   "Setting_taskbar-copilot_Name": "Copilot-voorbeeldknop",
-  "Setting_taskbar-copilot_Description": "De Copilot-voorbeeldknop op de taakbalk weergeven of verbergen"
+  "Setting_taskbar-copilot_Description": "De Copilot-voorbeeldknop op de taakbalk weergeven of verbergen",
+  "ExternalApps_WinGetUnavailable": "Kan installatiestatus niet bepalen. Maak verbinding met internet en klik op de knop Vernieuwen.",
+  "Error_NoInternetConnection": "Geen internetverbinding. Maak verbinding en probeer het opnieuw.",
+  "Error_WinGetInstallFailed": "Kan WinGet niet installeren. Controleer uw internetverbinding.",
+  "Error_WinGetNotAvailable": "WinGet is niet beschikbaar op dit systeem."
 }
