--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -1398,5 +1398,9 @@
   "Button_Unlock": "Desbloquear",
   "Common_ClickToUnlock": "Clique para desbloquear",
   "Setting_taskbar-copilot_Name": "Botão de visualização do Copilot",
-  "Setting_taskbar-copilot_Description": "Mostrar ou ocultar o botão de visualização do Copilot na barra de tarefas"
+  "Setting_taskbar-copilot_Description": "Mostrar ou ocultar o botão de visualização do Copilot na barra de tarefas",
+  "ExternalApps_WinGetUnavailable": "Não é possível determinar o status da instalação. Conecte-se à internet e clique no botão Atualizar.",
+  "Error_NoInternetConnection": "Sem conexão com a internet. Por favor, conecte-se e tente novamente.",
+  "Error_WinGetInstallFailed": "Falha ao instalar o WinGet. Verifique sua conexão com a internet.",
+  "Error_WinGetNotAvailable": "O WinGet não está disponível neste sistema."
 }
