--- a/src/Winhance.WPF/Localization/vi.json
+++ b/src/Winhance.WPF/Localization/vi.json
@@ -1398,5 +1398,9 @@
   "Button_Unlock": "Mở khóa",
   "Common_ClickToUnlock": "Nhấp để mở khóa",
   "Setting_taskbar-copilot_Name": "Nút Xem trước Copilot",
-  "Setting_taskbar-copilot_Description": "Hiển thị hoặc ẩn nút Xem trước Copilot trên thanh tác vụ"
+  "Setting_taskbar-copilot_Description": "Hiển thị hoặc ẩn nút Xem trước Copilot trên thanh tác vụ",
+  "ExternalApps_WinGetUnavailable": "Không thể xác định trạng thái cài đặt. Kết nối internet và nhấp vào nút Làm mới.",
+  "Error_NoInternetConnection": "Không có kết nối internet. Vui lòng kết nối và thử lại.",
+  "Error_WinGetInstallFailed": "Cài đặt WinGet thất bại. Vui lòng kiểm tra kết nối internet của bạn.",
+  "Error_WinGetNotAvailable": "WinGet không có sẵn trên hệ thống này."
 }
